<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerHeader"
    android:orientation="vertical"
    android:gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@color/colorPrimary"
    android:padding="10dp"
    tools:context=".Activities.MainActivity">
    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_cloud_black_24dp"
        android:tint="@color/colorAccent"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/AppTheme.Title"
            android:text="@string/username"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/AppTheme.Subtitle"
            android:text="@string/correousuario"/>
    </LinearLayout>
</LinearLayout>