<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="misiont.mision6.Fragments.FragmentImagen">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:elevation="20dp"
        android:layout_margin="20dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"        >
        <ImageView
            android:id="@+id/imageViewImageFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_camera_alt_black_24dp"
            />
    </android.support.v7.widget.CardView>
    <TextView
        android:id="@+id/textViewRuta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ruta"
        android:gravity="center"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/buttonImagenAbrir"
            android:background="@color/colorAccent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/abrir"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/buttonImagenCapturar"
            android:background="@color/colorAccent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/capturar"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</LinearLayout>
